<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".login">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/user_logo"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_account_circle_24" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:maxWidth="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:autofillHints="username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginImage" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:maxWidth="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:autofillHints="Password"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:maxWidth="320dp"
        android:layout_height="wrap_content"
        android:text="@string/loginToApp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:maxWidth="320dp"
        android:layout_height="wrap_content"
        android:text="@string/registerUser"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />



</androidx.constraintlayout.widget.ConstraintLayout>